--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,4 +1,4 @@
-.container {
+.home-container {
   width: 100%;
   margin-bottom: 40px;
 }
@@ -106,6 +106,10 @@
 @media (max-width: 740px) {
   .image-card-container {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .image-container{
+    width: 94%;
   }
 
   .image-container h2 {
